# Rust-REST-API-Auth

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  index.json
.postman/: api  api_ad94fe3f-b5c2-4f8d-a5ae-81b8e0215226
collections/: index.json
docs/: index.json
environment/: .env.example
migrations/main/: 0001_accounts_table.sql  0002_test_update.sql  0003_test_update_2.sql
src/: lib.rs  main.rs
src/app_var/: environment.rs
src/controller/: mod.rs
src/server/: mod.rs
src/var/: mod.rs  strings.rs
src/var/environment/: constants.rs  mod.rs
