[package]
name = "rust_rest_api_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
serde = {version = "1.0.214", features = ["derive"]}
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "tls-rustls"] }
